--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   validate-branch:
-    if: startsWith(github.ref, 'refs/heads/release-') && github.ref != 'refs/heads/release-'
+    if: startsWith(github.ref, 'refs/heads/release-')
     runs-on: ubuntu-latest
     steps:
       - name: Validate branch
