--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           BRANCH_NAME=${{ github.event.inputs.from_branch }}
           if [[ ! "$BRANCH_NAME" =~ ^release-[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$ ]]; then
-            echo "Branch name does not match the pattern release-x.y.z"
+            echo "$BRANCH_NAME does not match the pattern release-x.y.z"
             exit 1
           fi
 
